# tauri-release

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
templates/: README.md
templates/wa/: .gitignore  README.md  package.json  pnpm-lock.yaml
templates/wa/src-tauri/: Cargo.toml  tauri.conf.json  wa.json
templates/wa/src-tauri/icons/: icon.icns
templates/wa/src-tauri/src/: cmd.rs  main.rs  menu.rs  utils.rs  wa.js
templates/wa/src-tauri/src/wa/: cmd.rs  menu.rs  setup.rs
